examples/test/testpolicy13826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13826
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key38: value28
      key11: value7
      key13: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value31
          key33: value15
      podSelector:
        matchLabels:
          key19: value11
          key42: value10
